@@ -178,11 +178,6 @@
 #p 110
 #outgoing_port 110
 
-# pid_file FILENAME
-# Path for pidfile. Must be a full path starting with a '/'
-# Empty for no pid file. Not used in inetd mode
-#pid_file /var/run/perdition
-
 # s|outgoing_server: SERVER[,SERVER...]
 # Default server(s).
 # (default "")
@@ -190,6 +185,22 @@
 #outgoing_server  sarah:110,localhost
 #outgoing_server  sarah:110
 #outgoing_server  sarah
+
+# pid_file FILENAME
+# Path for pidfile. Must be a full path starting with a '/'.that 
+# To allow perdition to remove the pid file after the owner of
+# the perdition process is changed to a non-root user, it is advised to
+# specify a pid file in a subdirectory of the system var state directory
+# (usually /var/run).  This subdirectory should be unique to this perdition
+# invocation and will be created and have its owner and permitions set to
+# allow perdition to subsequently removed the pid file.  
+# Empty for no pid file. Not used in inetd mode.
+# default <var_state_dir>/<basename>/<basename>.pid
+#pid_file /var/run/perdition/perdition.pid
+#pid_file /var/run/perdition.pop3/perdition.pop3.pid
+#pid_file /var/run/perdition.pop3s/perdition.pop3s.pid
+#pid_file /var/run/perdition.imap4/perdition.imap4.pid
+#pid_file /var/run/perdition.imap4s/perdition.imap4s.pid
 
 # S|strip_domain: STATE[,STATE...]
 # Allow domain portion of username to be striped in given state(s)
@@ -236,16 +247,27 @@
 # Use SSL and or TLS for the listening and/or outgoing connections.
 #ssl_mode ssl_listen
 
+# ssl_ca_chain_file:
+# Chain file containing Certificate Authorities to use when 
+# verifying certificates. Overrides ssl_ca_file and ssl_ca_path
+# (default "")
+#ssl_chain_file A/etc/perdition/perdition.ca.pem
+
 # ssl_ca_file FILENAME:
-# Use SSL and or TLS for the listening and/or outgoing connections.
+# File containing Certificate Authorities to use when verifying certificates.
+# When building the Certificate Authorities chain, ssl_ca_file is used
+# first, if set, and then ssl_ca_path, if set.
 # (default "")
 #(recommended location "/etc/perdition/perdition.ca.pem")
 #ssl_ca_file /etc/perdition/perdition.ca.pem
 
 # ssl_ca_path PATHNAME:
-# Certificate Authorities to use when verifying certificates.
+# Derectory containing Certificate Authorities files to use when verifying 
+# certificates. 
+# When building the Certificate Authorities chain, ssl_ca_file is used
+# first, if set, and then ssl_ca_path, if set.
 # (default "/etc/perdition/perdition.ca/")
-#ssl_ca_file /etc/perdition/perdition.ca.pem
+#ssl_ca_file /etc/perdition/perdition.ca/
 
 # ssl_ca_accept_self_signed:
 # Accept self-signed certificates.
