@@ -16,6 +16,8 @@ XXX
   - Fixed bug where user-supplied username was used for db lookup
     rather than the key derived from the query_string option
     if it is supplied. Roland Rosenfel
+  - Added missing documentation. paricularly for pid_file
+    and ssl_ca_* options
 
 ----------------------------------------------------------------------
 
